@@ -2,8 +2,6 @@ package ledski.askbot.parser.rules;
 
 import static ledski.askbot.lexer.Token.TokenType.*;
 
-import ledski.askbot.parser.SyntaxExceptions.NotAToken;
-import ledski.askbot.parser.SyntaxExceptions.UnfinishedCode;
 import ledski.askbot.parser.SyntaxExceptions.UnexpectedToken;
 import ledski.askbot.parser.SyntaxRule;
 import ledski.askbot.parser.SyntaxManager;
