@@ -1,3 +1,12 @@
+A classe Main foi autalizada para incluir um codigo que lê um arquivo chamado codigo.ask e passar
+as linhas desse arquivo para o Lexer.
+
+A classe ItemsAdicionais foi corrigida.
+
+================================================================================
+ANTERIOR
+================================================================================
+
 Antes a regra Inicio foi mesclada com a Especialidade. Porém para melhor clareza de código e
 coerência com a grammar-rules.txt a regra Especialidade agora é uma regra normal que extends
 GrammarRule, e a Regra início passou a ser a classe SyntaxTree, que não extende GrammarRule.
